完成带哨兵的单向链表的代码改写与测试