@@ -15,7 +15,7 @@ public class TestSinglyLinkedList {
         singlyLinkedList.addFirst(5);
         singlyLinkedList.addFirst(6);
 
-        SinglyLinkedList singlyLinkedList1 = new SinglyLinkedList();
+//        SinglyLinkedList singlyLinkedList1 = new SinglyLinkedList();
 
 //        singlyLinkedList.loop(p->System.out.println(p));
 //        singlyLinkedList.loop(System.out::println);
@@ -39,11 +39,11 @@ public class TestSinglyLinkedList {
 //        singlyLinkedList.loop(System.out::println);
 //        singlyLinkedList1.loop(System.out::println);
 
-//        singlyLinkedList.loop(System.out::println);
-//        singlyLinkedList.removeFirst();
-//        singlyLinkedList.remove(0);
-//        System.out.println("---------------------------------");
-//        singlyLinkedList.loop(System.out::println);
+        singlyLinkedList.loop(System.out::println);
+        singlyLinkedList.removeFirst();
+        singlyLinkedList.remove(0);
+        System.out.println("---------------------------------");
+        singlyLinkedList.loop(System.out::println);
 
 
     }
